# notion_calendar

./: .gitignore  main.py  pyproject.toml
src/calendar/: app.py  entity.py
src/calendar/extensions/: db.py
src/calendar/views/: users.py
