[tool.poetry]
name = "notion_calendar"
version = "0.1.0"
description = ""
authors = ["hardcream <julius.so@web.de>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.79.0"
uvicorn = {extras = ["standard"], version = "^0.18.2"}
python-multipart = "^0.0.5"
sqlmodel = "^0.0.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
